--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -4,6 +4,7 @@
     <string name="duckDuckGoPrivacySimplified">Ιδιωτικότητα, απλοποιημένη.</string>
     <string name="yes">Ναι</string>
     <string name="no">Οχι</string>
+    <string name="search">Αναζήτηση</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Επισκεφθείτε τις Ρυθμίσεις για να εκτελείτε κάθε φορά αναζήτηση και περιήγηση με το DuckDuckGo.</string>
@@ -384,15 +385,15 @@
     <string name="daxIntroCtaText">Στη συνέχεια, δοκιμάστε να επισκεφτείτε έναν από τους αγαπημένους σας ιστότοπους! &lt;br/&gt;&lt;br/&gt;Θα εμποδίσω τους ιχνηλάτες ώστε να μην μπορούν να σας κατασκοπεύουν. Επίσης, θα αναβαθμίσω την ασφάλεια της σύνδεσής σας αν είναι δυνατόν. &#128274;</string>
     <string name="daxEndCtaText">Έχετε αυτό! &lt;br/&gt;&lt;br/&gt;Να θυμάστε: κάθε φορά που περιηγείστε μαζί μου μια ανατριχιαστική διαφήμιση χάνει τα φτερά της. &#128077;</string>
     <string name="daxSerpCtaText">Οι αναζητήσεις σας στο DuckDuckGo είναι ανώνυμες και ποτέ δεν αποθηκεύω το ιστορικό αναζήτησης. Ποτέ. &#128588;</string>
-    <string name="daxNonSerpCtaText">Κάθε τοποθεσία έχει κάποιο βαθμό προστασίας προσωπικών δεδομένων και απορρήτου. Πατήστε πάνω του για να δείτε πώς προστάτευσα το απόρρητό σας. &lt;br/&gt;&lt;br/&gt; Δοκιμάστε να καθαρίσετε τα δεδομένα σας πατώντας το κουμπί φωτιάς.</string>
-    <string name="daxMainNetworkStep1CtaText">Ενημέρωση εκ των προτέρων!&lt;br/&gt;&lt;br/&gt; %s τρέχει ένα σημαντικό δίκτυο παρακολούθησης.&lt;br/&gt;&lt;br/&gt;Ένας χαμηλός βαθμός απορρήτου θα σας μαρτυρήσει σε τοποθεσίες σαν και αυτή.</string>
-    <string name="daxMainNetworkStep1OwnedCtaText">Ενημέρωση εκ των προτέρων!&lt;br/&gt;&lt;br/&gt; %s ανήκει στην %s, η οποία διαχειρίζεται ένα σημαντικό δίκτυο παρακολούθησης.</string>
-    <string name="daxMainNetworkStep21CtaText">Στην πραγματικότητα, οι %s ιχνηλάτες παραμονευουν σε περίπου %s των κορυφαίων τοποθεσιών. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep211CtaText">Στην πραγματικότητα, οι ιχνηλάτες %s κρύβονται σε όλο το διαδίκτυο. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep2CtaText">%s Θα αποκλείσω αυτούς τους ιχνηλάτες όταν περιηγείστε σε μη %s ιστότοπους.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="one">&#160;και &lt;b&gt;%d άλλος&lt;/b&gt; προσπαθούσε να σας ιχνηλατήσει εδώ. &lt;br/&gt;&lt;br/&gt;Τον μπλοκάρισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
         <item quantity="other">&#160;και &lt;b&gt;%d άλλοι&lt;/b&gt; προσπαθούσαν να σας εντοπίσουν εδώ. &lt;br/&gt;&lt;br/&gt;Τους εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;προσπαθούσε να σας εντοπίσει εδώ. &lt;br/&gt;&lt;br/&gt;Το εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one">&#160;προσπαθούσε να σας εντοπίσει εδώ. &lt;br/&gt;&lt;br/&gt;Το εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
+        <item quantity="other">&#160;προσπαθούσαν να σας εντοπίσει εδώ. &lt;br/&gt;&lt;br/&gt;Το εμπόδισα!&lt;br/&gt;&lt;br/&gt; ☝️Μπορείτε να ελέγξετε τη γραμμή διευθύνσεων URL για να δείτε ποιος προσπαθεί να σας παρακολουθήσει όταν επισκέπτεστε έναν νέο ιστότοπο.️</item>
+    </plurals>
+    <string name="daxNonSerpCtaText">Καθώς πιέζετε και μετακινείτε τον δρομέα, θα μπλοκάρω ενοχλητικούς ιχνηλάτες. &lt;br/&gt;&lt;br/&gt; Εμπρός - συνεχίστε την περιήγηση!</string>
+    <string name="daxMainNetworkOwnedCtaText">Ενημέρωση εκ των προτέρων! %s ανήκει στην %s.&lt;br/&gt;&lt;br/&gt; %s Οι ιχνηλάτες παραμονεύουν περίπου %s των κορυφαίων ιστοτόπων &#128561; αλλά μην ανησυχείτε! &lt;br/&gt;&lt;br/&gt;Θα μπλοκάρω %s σε αυτούς τους ιστότοπους την θέαση της δραστηριότητάς σας</string>
+    <string name="daxMainNetworkCtaText">Ενημέρωση εκ των προτέρων! Το %s είναι ένα σημαντικό δίκτυο παρακολούθησης.&lt;br/&gt;&lt;br/&gt; Οι ιχνηλάτες τους παραμονεύουν σε περίπου %s κορυφαίων ιστότοπων &#128561; αλλά μην ανησυχείτε! &lt;br/&gt;&lt;br/&gt;Θα μπλοκάρω %s σε αυτούς τους ιστότοπους την θέαση της δραστηριότητά σας.</string>
 </resources>
