--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -20,6 +20,7 @@
     <string name="duckDuckGoPrivacySimplified">Privātums, vienkāršots.</string>
     <string name="yes">Jā</string>
     <string name="no">Nē</string>
+    <string name="search">Meklēt</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Dodieties uz Iestatījumiem, lai meklētu un pārlūkotu ar DuckDuckGo katru reizi.</string>
@@ -55,7 +56,7 @@
     <!-- Sharing options -->
     <string name="options">Iespējas</string>
     <string name="shareLink">Kopīgot saiti</string>
-    <string name="shareMenuTitle">Kopīgot...</string>
+    <string name="shareMenuTitle">Kopīgot…</string>
     <string name="copyUrl">Kopēt saites adresi</string>
 
     <!-- Find in page -->
@@ -168,7 +169,7 @@
     <!-- Settings - Automatically clearing data -->
     <string name="settingsAutomaticallyClearingDialogSave">Saglabāt</string>
 
-    <string name="settingsAutomaticallyClearWhat">Automātiski nodzēst...</string>
+    <string name="settingsAutomaticallyClearWhat">Automātiski nodzēst…</string>
     <string name="settingsAutomaticallyClearWhatOptionNone">Neko</string>
     <string name="settingsAutomaticallyClearWhatOptionTabs">Cilnes</string>
     <string name="settingsAutomaticallyClearWhatOptionTabsAndData">Cilnes un datus</string>
@@ -408,16 +409,16 @@
     <string name="daxIntroCtaText">Tagad pamēģiniet ieiet kādā no jūsu mīļākajām vietnēm! &lt;br/&gt;&lt;br/&gt;Es nobloķēšu izsekotājus, lai viņi nevarētu jūs izspiegot. Ja iespējams, uzlabošu arī jūsu savienojuma drošību. &#128274;</string>
     <string name="daxEndCtaText">Tas izdevās! &lt;br/&gt;&lt;br/&gt;Atcerieties – katru reizi, kad jūs pārlūkojat ar mani, jocīgas reklāmas atkāpjas. &#128077;</string>
     <string name="daxSerpCtaText">Jūsu DuckDuckGo meklējumi ir anonīmi, un es nekad neuzglabāju jūsu meklēšanas vēsturi. Nekad. &#128588;</string>
-    <string name="daxNonSerpCtaText">Katrai vietnei ir savs konfidencialitātes līmenis. Pieskarieties tam, lai redzētu, kā es aizsargāju jūsu privātumu.&lt;br/&gt;&lt;br/&gt;Kaut ko vēl labāku? Pamēģiniet nodzēst datus, noklikšķinot uz uguns pogas.</string>
-    <string name="daxMainNetworkStep1CtaText">Galvas augšā!&lt;br/&gt;&lt;br/&gt; %s pārvalda lielu izsekošanas tīklu.&lt;br/&gt;&lt;br/&gt;Zems konfidencialitātes līmenis jūs aizvedīs uz šādām vietnēm.</string>
-    <string name="daxMainNetworkStep1OwnedCtaText">Galvas augšā!&lt;br/&gt;&lt;br/&gt; %s pieder uzņēmumam %s, kas pārvalda galveno izsekošanas tīklu.</string>
-    <string name="daxMainNetworkStep21CtaText">Faktiski %s izsekotāji slēpjas apmēram %s populārākajās vietnēs. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep211CtaText">Faktiski %s izsekotāju slēpjas visā internetā. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep2CtaText">%s Es bloķēšu šos izsekotājus, kad pārlūkosiet vietnes, kas nav %s vietnes.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="zero">&#160;un &lt;b&gt;%d citas&lt;/b&gt; mēģināja jūs izsekot. &lt;br/&gt;&lt;br/&gt;Es tās nobloķēju!&lt;br/&gt;&lt;br/&gt; ☝️Jūs varat pārbaudīt URL joslu, lai redzētu, kas mēģina jūs izsekot, kad apmeklējat jaunu vietni.️</item>
         <item quantity="one">&#160;un &lt;b&gt;%d citas&lt;/b&gt; mēģināja jūs izsekot. &lt;br/&gt;&lt;br/&gt;Es tās nobloķēju!&lt;br/&gt;&lt;br/&gt; ☝️Jūs varat pārbaudīt URL joslu, lai redzētu, kurš mēģina jūs izsekot, kad apmeklējat jaunu vietni.️</item>
         <item quantity="other">&#160;un &lt;b&gt;%d citas&lt;/b&gt; mēģināja jūs izsekot. &lt;br/&gt;&lt;br/&gt;Es tās nobloķēju!&lt;br/&gt;&lt;br/&gt; ☝️Jūs varat pārbaudīt URL joslu, lai redzētu, kurš mēģina jūs izsekot, kad apmeklējat jaunu vietni.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;mēģināja jūs izsekot. &lt;br/&gt;&lt;br/&gt;Es to nobloķēju!&lt;br/&gt;&lt;br/&gt; ☝️Jūs varat pārbaudīt URL joslu, lai redzētu, kurš mēģina jūs izsekot, kad apmeklējat jaunu vietni.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText" tools:ignore="MissingQuantity">
+        <item quantity="one" tools:ignore="ImpliedQuantity">&#160;mēģināja jūs izsekot. &lt;br/&gt;&lt;br/&gt;Es to nobloķēju!&lt;br/&gt;&lt;br/&gt; ☝️Jūs varat pārbaudīt URL joslu, lai redzētu, kurš mēģina jūs izsekot, kad apmeklējat jaunu vietni.️</item>
+        <item quantity="other">&#160;mēģināja jūs izsekot. &lt;br/&gt;&lt;br/&gt;Es to nobloķēju!&lt;br/&gt;&lt;br/&gt; ☝️Jūs varat pārbaudīt URL joslu, lai redzētu, kurš mēģina jūs izsekot, kad apmeklējat jaunu vietni.️</item>
+    </plurals>
+    <string name="daxNonSerpCtaText">Kad pieskarsies un ritināsi, es bloķēšu uzmācīgos izsekotājus. &lt;br/&gt;&lt;br/&gt;Aiziet – turpini pārlūkot!</string>
+    <string name="daxMainNetworkOwnedCtaText">Galvu augšā! %s pieder %s.&lt;br/&gt;&lt;br/&gt; %s izsekotāji slēpjas apmēram %s populārākajās vietnēs &#128561;, bet nevajag satraukties! &lt;br/&gt;&lt;br/&gt;Es bloķēšu %s iespēju redzēt tavas darbības šajās vietnēs.</string>
+    <string name="daxMainNetworkCtaText">Galvu augšā! %s ir galvenais izsekošanas tīkls.&lt;br/&gt;&lt;br/&gt; To izsekotāji slēpjas apmēram %s populārākajās vietnēs &#128561;, bet nevajag satraukties! &lt;br/&gt;&lt;br/&gt;Es bloķēšu %s iespēju redzēt tavas darbības šajās vietnēs.</string>
 </resources>
