Change version and add release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-We added a download confirmation dialog and a number of other bug fixes and improvements.
+Bug fixes and other improvements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
