--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -188,11 +188,11 @@
     <string name="bookmarksMenuTitle">Σελιδοδείκτες</string>
     <string name="bookmarksActivityTitle">Σελιδοδείκτες</string>
     <string name="bookmarkDeleteConfirmMessage">Θέλετε σίγουρα να διαγράψετε τον σελιδοδείκτη &lt;b&gt;%s&lt;/b&gt;;</string>
-    <string name="bookmarkDeleteConfirmTitle">Επιβεβαίωση</string>
+    <string name="dialogConfirmTitle">Επιβεβαίωση</string>
     <string name="bookmarkAddedFeedback">Ο σελιδοδείκτης προστέθηκε</string>
     <string name="bookmarkTitleHint">Τίτλος σελιδοδείκτη</string>
     <string name="bookmarkUrlHint">Διεύθυνση URL σελιδοδείκτη</string>
-    <string name="bookmarkSave">Αποθήκευση</string>
+    <string name="dialogSave">Αποθήκευση</string>
     <string name="bookmarkTitleEdit">Επεξεργασία σελιδοδείκτη</string>
     <string name="noBookmarks">Δεν προστέθηκαν σελιδοδείκτες ακόμα</string>
     <string name="bookmarkOverflowContentDescription">Περισσότερες επιλογές για σελιδοδείκτη %s</string>
