--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -188,11 +188,11 @@
     <string name="bookmarksMenuTitle">Signets</string>
     <string name="bookmarksActivityTitle">Signets</string>
     <string name="bookmarkDeleteConfirmMessage">Êtes-vous sûr(e) de vouloir supprimer le signet &lt;b&gt;%s&lt;/b&gt; ?</string>
-    <string name="bookmarkDeleteConfirmTitle">Confirmer</string>
+    <string name="dialogConfirmTitle">Confirmer</string>
     <string name="bookmarkAddedFeedback">Signet ajouté</string>
     <string name="bookmarkTitleHint">Titre du signet</string>
     <string name="bookmarkUrlHint">URL du signet</string>
-    <string name="bookmarkSave">Enregistrer</string>
+    <string name="dialogSave">Enregistrer</string>
     <string name="bookmarkTitleEdit">Modifier le signet</string>
     <string name="noBookmarks">Aucun signet ajouté pour le moment</string>
     <string name="bookmarkOverflowContentDescription">Plus d\'options pour le signet %s</string>
