--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -204,11 +204,11 @@
     <string name="bookmarksMenuTitle">Bokmärken</string>
     <string name="bookmarksActivityTitle">Bokmärken</string>
     <string name="bookmarkDeleteConfirmMessage">Är du säker på att du vill radera bokmärket &lt;b&gt;%s&lt;/b&gt;?</string>
-    <string name="bookmarkDeleteConfirmTitle">Bekräfta</string>
+    <string name="dialogConfirmTitle">Bekräfta</string>
     <string name="bookmarkAddedFeedback">Bokmärket har lagts till</string>
     <string name="bookmarkTitleHint">Bokmärkesrubrik</string>
     <string name="bookmarkUrlHint">Bokmärkets URL</string>
-    <string name="bookmarkSave">Spara</string>
+    <string name="dialogSave">Spara</string>
     <string name="bookmarkTitleEdit">Redigera bokmärke</string>
     <string name="noBookmarks">Inga bokmärken har lagts till ännu</string>
     <string name="bookmarkOverflowContentDescription">Fler alternativ för bokmärke %s</string>
